<resources>
    <string name="app_name">Ejercicios</string>

    <string name="inciaoapp">Bienvenido</string>
    <string name="btonejecutar">Ejecutar</string>
    <string name="vocales1">vocales 1</string>
    <string name="vocales2">vocales 2</string>

    <string name="primera">primera palabra</string>
    <string name="segunda">segunda palabra</string>
    <string name="segundaa">Estimados papitos:\nEnvío links para la videollamada del día de mañana.\n1er TURNO:\nLucía \nSofía \nNoah \nMario Joaquín \n\nMiss Ivette le está invitando a una reunión de Zoom programada.\r\n\r\nTema: Reunión Zoom de Miss Ivette\r\nHora: 28 may 2020 10:20 AM Lima\r\n\r\nUnirse a la reunión Zoom\r\nhttps://us04web.zoom.us/j/76843722267?pwd=NThGeDZ4bG03OWxhMndWVXJtbXFJQT09\r\n\r\nID de reunión: 768 4372 2267\r\nContraseña: 2tMfig\r\n\n2do TURNO:\nAbdiel \nFelipe \nDylan \nCataleya\nIsis \n\nMiss Ivette le está invitando a una reunión de Zoom programada.\r\n\r\nTema: Reunión Zoom de Miss Ivette\r\nHora: 28 may 2020 10:50 AM Lima\r\n\r\nUnirse a la reunión Zoom\r\nhttps://us04web.zoom.us/j/71996132591?pwd=NUNVYjBJNmJKNUVUMEVEOWt4Z1Qydz09\r\n\r\nID de reunión: 719 9613 2591\r\nContraseña: 8wjskt\r\n\n\n3er. TURNO:\nNicolás \nMacarena\nRafaela \nSalvador\nAlessandro\n\nMiss Ivette le está invitando a una reunión de Zoom programada.\r\n\r\nTema: Reunión Zoom de Miss Ivette\r\nHora: 28 may 2020 11:20 AM Lima\r\n\r\nUnirse a la reunión Zoom\r\nhttps://us04web.zoom.us/j/77918040982?pwd=S1BMSGJpd0RZN0JkYkFBcGp3QkdCUT09\r\n\r\nID de reunión: 779 1804 0982\r\nContraseña: 7QpZRh\r\n\n\nRecuerden sus horarios nos vemos mañana.\nMuchas gracias.\nSaludos...\nMiss Ivette 🤗 \n\n\n</string>

</resources>
