<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <LinearLayout
      android:padding="10dp"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <EditText
          android:hint="@string/primera"
          android:id="@+id/txt1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

      </EditText>

      <EditText
          android:hint="@string/segunda"
          android:id="@+id/txt2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

      </EditText>

      <Button
          android:id="@+id/btncalcular"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/btonejecutar">

      </Button>

      <TextView
          android:id="@+id/tvestad"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

      </TextView>

      <LinearLayout
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">


          <LinearLayout
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
              <TextView
                  android:text="@string/vocales1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">

              </TextView>
              <TextView
                  android:id="@+id/cant1"
                  android:text="cantiabovlcaes 2"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">

              </TextView>

          </LinearLayout>

          <LinearLayout

              android:orientation="vertical"
              android:gravity="right"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

          <TextView
              android:text="@string/vocales2"
            android:layout_marginRight="10dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

          </TextView>
          <TextView
              android:id="@+id/can2"
              android:text="cantiabovlcaes 2"
              android:layout_marginRight="10dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

          </TextView>

          </LinearLayout>
      </LinearLayout>
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>